# fickle-ferrets

./: .gitignore  CANDIDATE_ASSIGNMENT.md  INITIAL_EMAIL.md  README.md  RESULTS.md  RESULTS_REPORT.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/db/: __init__.py  base.py  models.py  session.py
app/schemas/: __init__.py  models.py
app/services/: experiment_service.py  ferret_service.py
scripts/: __init__.py  post_affirm.py
